refactor: [ai] use tanstack router

--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
+    "@tanstack/react-router": "^1.120.20",
+    "@tanstack/react-router-devtools": "^1.120.20",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "russell_engine": "^0.2.0",
     "tailwindcss": "^4.1.8",
-    "wouter": "^3.7.1"
+    "zod": "^3.25.56"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
